# FizykaKwantowa

./: README.md  Wyjaśnienie_gdzie_jest_plik  pyproject.toml  skompresowane_zadanie.ipynb
